add scss config

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="/react-router-01/index.html">React router 1</a></li>
-      <li><a href="/react-router-02/index.html">React router 2</a></li>
+      <li><a href="/hello-world-01/index.html">Hello World</a></li>
+      <li><a href="/tabs-02/index.html">Tabs</a></li>
     </ul>
   </body>
 </html>
