--- a/examples/tabs-02/index.html
+++ b/examples/tabs-02/index.html
@@ -2,4 +2,5 @@
 <title>Dynamic Segments Example</title>
 <body>
 <div id="app"></div>
-<script src="/build/react-router-2.js"></script>
+<script src="/build/shared.js"></script>
+<script src="/build/tabs-02.js"></script>
