Simpler tabs example

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,8 @@
   <body>
     <ul>
       <li><a href="/hello-world-01/index.html">Hello World</a></li>
-      <li><a href="/tabs-02/index.html">Tabs</a></li>
+      <li><a href="/tabs-02/index.html">Old Tabs</a></li>
+      <li><a href="/tabs-03/index.html">New Tabs example</a></li>
     </ul>
   </body>
 </html>
