--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,7 @@
       <li><a href="/hello-world-01/index.html">Hello World</a></li>
       <li><a href="/tabs-02/index.html">Old Tabs</a></li>
       <li><a href="/tabs-03/index.html">New Tabs example</a></li>
+      <li><a href="/position-04/index.html">Position</a></li>
     </ul>
   </body>
 </html>
