--- a/examples/ex-01-hello-world/index.html
+++ b/examples/ex-01-hello-world/index.html
@@ -3,4 +3,4 @@
 <body>
 <div id="app"></div>
 <script src="/build/shared.js"></script>
-<script src="/build/position-04.js"></script>
+<script src="/build/ex-01-hello-world.js"></script>
