--- a/examples/ex-02-dumb-tabs/index.html
+++ b/examples/ex-02-dumb-tabs/index.html
@@ -3,4 +3,4 @@
 <body>
 <div id="app"></div>
 <script src="/build/shared.js"></script>
-<script src="/build/hello-world-01.js"></script>
+<script src="/build/ex-02-dumb-tabs.js"></script>
