--- a/examples/ex-03-smart-tabs/index.html
+++ b/examples/ex-03-smart-tabs/index.html
@@ -3,4 +3,4 @@
 <body>
 <div id="app"></div>
 <script src="/build/shared.js"></script>
-<script src="/build/tabs-03.js"></script>
+<script src="/build/ex-03-smart-tabs.js"></script>
