--- a/examples/ex-04-position/index.html
+++ b/examples/ex-04-position/index.html
@@ -3,4 +3,4 @@
 <body>
 <div id="app"></div>
 <script src="/build/shared.js"></script>
-<script src="/build/tabs-02.js"></script>
+<script src="/build/ex-04-position.js"></script>
