--- a/examples/index.html
+++ b/examples/index.html
@@ -4,10 +4,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="/hello-world-01/index.html">Hello World</a></li>
-      <li><a href="/tabs-02/index.html">Old Tabs</a></li>
-      <li><a href="/tabs-03/index.html">New Tabs example</a></li>
-      <li><a href="/position-04/index.html">Position</a></li>
+      <li><a href="/ex-01-hello-world/index.html">Hello World</a></li>
+      <li><a href="/ex-02-dumb-tabs/index.html">Dumb Tabs</a></li>
+      <li><a href="/ex-03-smart-tabs/index.html">Smart Tabs</a></li>
+      <li><a href="/ex-04-position/index.html">Position</a></li>
     </ul>
   </body>
 </html>
