--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
       <li><a href="/ex-02-dumb-tabs/index.html">Dumb Tabs</a></li>
       <li><a href="/ex-03-smart-tabs/index.html">Smart Tabs</a></li>
       <li><a href="/ex-04-position/index.html">Position</a></li>
+      <li><a href="/ex-05-dumb-menu-list/index.html">Dumb Menu List</a></li>
     </ul>
   </body>
 </html>
